Corrected layout issues related to #329

--- a/src/less/src/w2ui-layout.less
+++ b/src/less/src/w2ui-layout.less
@@ -25,8 +25,9 @@
 			z-index: 120; 
 
 			.w2ui-panel-title {
+				padding: 5px;
 				background-color: @layout-title-background-color;
-				border: 1px solid @layout-border-color;
+				border-bottom: @layout-title-border;
 			}
 
 			.w2ui-panel-tabs {
