--- a/src/less/w2ui-dark.less
+++ b/src/less/w2ui-dark.less
@@ -133,6 +133,8 @@
 
 @layout-color: #C0C8D5;
 @layout-background-color: inherit;
+@layout-title-border: 1px solid silver;
+@layout-title-background-color: #F0F0F0;
 @layout-toolbar-background-color: inherit;
 @layout-resizer-background-color: #222;
 @layout-resizer-hover-background-color: #222;
