--- a/src/less/w2ui.less
+++ b/src/less/w2ui.less
@@ -117,7 +117,7 @@
 
 @layout-color: inherit;
 @layout-background-color: #F5F6F7;
-@layout-border-color: silver;
+@layout-title-border: 1px solid silver;
 @layout-title-background-color: #F0F0F0;
 @layout-toolbar-background-color: #FAFAFA;
 @layout-resizer-background-color: transparent;
